# pyproject.toml
#
# This file serves as the central configuration for the Python project,
# using the setuptools build backend.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# ANALYSIS: The package name is simplified to its canonical form.
# The 'venoajie-' prefix was an attempt to work with the GitHub Packages
# registry, which is no longer the target.
name = "shared-config"
version = "0.1.0"
authors = [
    { name = "Trading Systems Team", email = "ven.ajie@protonmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "tomli==2.0.1",
    "loguru==0.7.2",    
    "trading-engine-core @ git+https://github.com/venoajie/trading-engine-core.git@v0.1.1",

]

[project.urls]
"Homepage" = "https://github.com/venoajie/shared-config"
"Repository" = "https://github.com/venoajie/shared-config"

# Specifies the directory where the package source code resides.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shared_config = ["*.toml"]

# Defines optional dependencies for development, testing, and releasing.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "python-semantic-release>=9.0",
    "build>=1.0",
]

# --- Tool Configurations ---

# Configuration for python-semantic-release.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
branch = "main"
upload_to_repository = false
# ANALYSIS: This is kept as true. It ensures the built wheel and tar.gz files
# are attached to the GitHub Release page, which is a best practice.
upload_to_release = true
major_on_zero = true


# Configuration for the Ruff linter and formatter.
[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Configuration for Pytest.
[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
